[package]
name = "todo_cli"
version = "0.1.0"
authors = ["Gleb Irovich <gleb.irovich@locatee.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_json = "1.0"
tui = "0.12"
termion = "1.5"
chrono = "0.4"
