[package]
name = "rudo"
version = "0.1.1"
authors = ["Gleb Irovich <gleb.irovich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_json = "1.0"
tui = "0.12"
termion = "1.5"
chrono = "0.4"
dirs = "3.0.1"
self_update = { version = "0.23.0", features = ["archive-tar", "compression-flate2"] }
